# AxumAPIServer

./: LICENSE
axum_apiserver/: Cargo.toml
axum_apiserver/src/: config.rs  error.rs  main.rs  routes.rs
axum_apiserver/src/handlers/: features.rs  home.rs  language.rs  mod.rs
axum_apiserver/src/i18n/: lang.json  language.rs  middleware.rs  mod.rs
axum_apiserver/src/middleware/: mod.rs
axum_apiserver/src/templates/: base.html  context.rs  engine.rs  home.html
axum_apiserver/src/templates/partials/: footer.html  nav.html
axum_apiserver/static/css/: styles.css
