[package]
name = "axum-multilingual"
version = "0.1.0"
edition = "2024"
authors = ["Your Name shihpeng.lee@gmail.com"]
description = "Baseline server with multi-lingual MiniJinja2 and HTMX"

[dependencies]
# Server and routing
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templates and serialization
minijinja = { version = "2.0", features = ["builtins", "loader"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
async-trait = "0.1.77"